// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogBoxNotificationContainer should render both an error and warning notification 1`] = `
<View
  style={
    Object {
      "bottom": 20,
      "left": 10,
      "position": "absolute",
      "right": 10,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 8,
        "marginBottom": 5,
        "overflow": "hidden",
      }
    }
  >
    <LogBoxLogNotification
      level="warn"
      log={
        LogBoxLog {
          "category": "Some kind of message",
          "codeFrame": undefined,
          "componentStack": Array [],
          "count": 1,
          "isComponentError": false,
          "level": "warn",
          "message": Object {
            "content": "Some kind of message",
            "substitutions": Array [],
          },
          "stack": Array [],
          "symbolicated": Object {
            "error": null,
            "stack": null,
            "status": "NONE",
          },
          "type": undefined,
        }
      }
      onPressDismiss={[Function]}
      onPressOpen={[Function]}
      totalLogCount={1}
    />
  </View>
  <View
    style={
      Object {
        "borderRadius": 8,
        "marginBottom": 5,
        "overflow": "hidden",
      }
    }
  >
    <LogBoxLogNotification
      level="error"
      log={
        LogBoxLog {
          "category": "Some kind of message (latest)",
          "codeFrame": undefined,
          "componentStack": Array [],
          "count": 1,
          "isComponentError": false,
          "level": "error",
          "message": Object {
            "content": "Some kind of message (latest)",
            "substitutions": Array [],
          },
          "stack": Array [],
          "symbolicated": Object {
            "error": null,
            "stack": null,
            "status": "NONE",
          },
          "type": undefined,
        }
      }
      onPressDismiss={[Function]}
      onPressOpen={[Function]}
      totalLogCount={1}
    />
  </View>
</View>
`;

exports[`LogBoxNotificationContainer should render null with no logs 1`] = `null`;

exports[`LogBoxNotificationContainer should render null with no selected log and disabled 1`] = `null`;

exports[`LogBoxNotificationContainer should render selected fatal error even when disabled 1`] = `null`;

exports[`LogBoxNotificationContainer should render selected syntax error even when disabled 1`] = `null`;

exports[`LogBoxNotificationContainer should render the latest error notification 1`] = `
<View
  style={
    Object {
      "bottom": 20,
      "left": 10,
      "position": "absolute",
      "right": 10,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 8,
        "marginBottom": 5,
        "overflow": "hidden",
      }
    }
  >
    <LogBoxLogNotification
      level="error"
      log={
        LogBoxLog {
          "category": "Some kind of message (latest)",
          "codeFrame": undefined,
          "componentStack": Array [],
          "count": 1,
          "isComponentError": false,
          "level": "error",
          "message": Object {
            "content": "Some kind of message (latest)",
            "substitutions": Array [],
          },
          "stack": Array [],
          "symbolicated": Object {
            "error": null,
            "stack": null,
            "status": "NONE",
          },
          "type": undefined,
        }
      }
      onPressDismiss={[Function]}
      onPressOpen={[Function]}
      totalLogCount={2}
    />
  </View>
</View>
`;

exports[`LogBoxNotificationContainer should render the latest warning notification 1`] = `
<View
  style={
    Object {
      "bottom": 20,
      "left": 10,
      "position": "absolute",
      "right": 10,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 8,
        "marginBottom": 5,
        "overflow": "hidden",
      }
    }
  >
    <LogBoxLogNotification
      level="warn"
      log={
        LogBoxLog {
          "category": "Some kind of message (latest)",
          "codeFrame": undefined,
          "componentStack": Array [],
          "count": 1,
          "isComponentError": false,
          "level": "warn",
          "message": Object {
            "content": "Some kind of message (latest)",
            "substitutions": Array [],
          },
          "stack": Array [],
          "symbolicated": Object {
            "error": null,
            "stack": null,
            "status": "NONE",
          },
          "type": undefined,
        }
      }
      onPressDismiss={[Function]}
      onPressOpen={[Function]}
      totalLogCount={2}
    />
  </View>
</View>
`;
